feat: - migrate to spring boot 4.1 - bump baseline to java 25 - update dependencies - make sure that new code doesn't use jackson v2