@@ -117,7 +117,7 @@ public class DataPreloaderManager {
                     .ifPresent(html -> html.setAttribute("data-signed-up", "true"));
             }
             idx.getElementsByTagName("script").forEach(element -> element.setAttribute(NONCE, nonce));
-            var head = idx.getElementsByTagName("head").get(0);
+            var head = idx.getElementsByTagName("head").getFirst();
             head.appendChild(buildScripTag(json.asJsonString(configurationManager.getInfo(session)), APPLICATION_JSON, "preload-info", null));
             var httpServletRequest = requireNonNull(request.getNativeRequest(HttpServletRequest.class));
             head.appendChild(buildMetaTag("GID", request.getSessionId()));
@@ -153,16 +153,16 @@ public class DataPreloaderManager {
 
         var title = messageSourceManager.getMessageSourceFor(event).getMessage("event.get-your-ticket-for", new String[] {event.getDisplayName()}, locale);
 
-        var head = eventOpenGraph.getElementsByTagName("head").get(0);
+        var head = eventOpenGraph.getElementsByTagName("head").getFirst();
 
-        eventOpenGraph.getElementsByTagName("html").get(0).setAttribute("lang", locale.getLanguage());
+        eventOpenGraph.getElementsByTagName("html").getFirst().setAttribute("lang", locale.getLanguage());
 
         //
 
         getMetaElement(eventOpenGraph, "name", "twitter:image").setAttribute(CONTENT, baseUrl + "/file/" + event.getFileBlobId());
         //
 
-        eventOpenGraph.getElementsByTagName("title").get(0).setTextContent(title);
+        eventOpenGraph.getElementsByTagName("title").getFirst().setTextContent(title);
         getMetaElement(eventOpenGraph, PROPERTY, "og:title").setAttribute(CONTENT, title);
         getMetaElement(eventOpenGraph, PROPERTY,"og:image").setAttribute(CONTENT, baseUrl + "/file/" + event.getFileBlobId());
 
@@ -202,7 +202,7 @@ public class DataPreloaderManager {
     }
 
     private static Element getMetaElement(Document document, String attrName, String propertyValue) {
-        return (Element) document.getAllNodesMatching(Selector.select().element("meta").attrValEq(attrName, propertyValue).toMatcher(), true).get(0);
+        return (Element) document.getAllNodesMatching(Selector.select().element("meta").attrValEq(attrName, propertyValue).toMatcher(), true).getFirst();
     }
 
     /**
